<resources>    
    <integer name="viewfinder_border_width">4</integer>
    <integer name="viewfinder_border_length">60</integer>
    <string name="app_name">SpyDroid</string>
    <string name="ip_hint">Enter Server IP</string>
    <string name="username_hint">Enter Username</string>
    <string name="qrid_hint">Enter QR</string>
    <string name="connect_button">Connect</string>
    <string name="scan_button">Scan</string>
    <string name="waiting_room_title">Waiting to Start</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="qr_id_text">Scan your identity QR</string>
    
    <string name="join_game_button_text">Join Game</string>
    <string name="game_ended_text">Game Ended</string>
    <string name="done_button_text">Done</string>
    <string name="create_game_button_text">Create Game</string>
    <string name="game_name_hint">Enter Game Name</string>
    <string name="max_score_hint">Enter Max Score</string>
    <string name="start_game_button_text">Start Game</string>
    <string name="about_text">ABOUT</string>
    
</resources>
