<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <EditText
        android:id="@+id/game_name_edittext"
        android:hint="@string/game_name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        />
    <EditText 
        android:id="@+id/max_score_edittext"
        android:hint="@string/max_score_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button 
        android:id="@+id/create_game_send_button"
        android:text="@string/create_game_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>
